src/index.css
/* Custom properties */
/* :root is not the same as #root */
:root {
  --font-base: 'Lato', sans-serif;
  --font-display: 'Lobster', sans-serif;
}

/* Basic styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-base);
  text-align: center;
}

h1 {
  font-family: var(--font-display);
}

/*Search Bar*/

.searchBar {
  position: relative;
  display: inline-block;
  margin: 1rem;
}

input {
  padding-right: 20px;
  text-align: center;
  width: 24.75rem;
  height: 2.625rem;
  font-family: inherit;
}

.material-symbols-outlined {
  position: absolute;
  margin-left: 1rem;
  top: 50%;
  transform: translateY(-50%);
}
/*Search bar ends*/

/* Nav */
header {
  display: flex;
  top: 0;
  justify-content: space-between;
  align-items: center;
}

header,
nav {
  padding: 1rem;
}

nav {
  background-color: white;
  color: #333333;
  height: 4rem;
  text-align: center;
}
li {
  display: inline-block;
  margin-left: 10rem;
}

nav h2,
nav h1 {
  display: inline-block;
  font-size: 1rem;
}

header a:visited {
  color: #333;
}

.logIn_btn {
  background-color: darkslateblue;
  color: white;
  padding: 0.4rem;
  min-height: 0.625rem;
  min-width: 2.188rem;
  border-radius: 0.3rem;
  margin-left: 5rem;
  text-decoration: none;
}

#navAuth {
  color: white;
}

/*navigation responsive*/
.menu_trigger {
  display: none;
  background-color: transparent;
  box-shadow: none;
  border: none;
}
/*navigation responsive*/

/* Hero */
/* Hero image by LUM3N from Pixabay */
/* https://pixabay.com/photos/fashion-accessories-handbag-2208045/ */
.hero {
  position: relative;
  display: flex;
  justify-content: end;
  align-items: center;
  width: 100%;
  max-width: 1240px;
  /* Calculate height: 100vh - Header height * 2 */
  height: calc(100vh - 8rem);
  margin: 0 auto 4rem;
  padding: 1rem 4rem;
  background-image: url('./assets/hero-img.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  box-shadow: inset 0 0 0 5000px rgba(35, 44, 128, 0.6);
}
.hero__title {
  text-align: right;
}
.hero__title h1 {
  margin-bottom: 1.5rem;
  font-size: 6rem;
  font-weight: 400;
}
.hero__title p {
  font-size: 1.25rem;
}
.hero__btn {
  position: absolute;
  bottom: 1.5rem;
  left: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;
  border: none;
  background: none;
  transform: translateX(-50%);
  cursor: pointer;
}
.hero__btn:hover {
  color: #ccc;
}
.hero__btn__icon {
  margin: 0;
  font-size: 3rem;
  color: white;
}

/* Footer starts here */
#footer {
  display: flex;
  justify-content: center;
  align-items: center;

  margin: 0 auto;
  max-width: 1240px;
  padding: 3rem;
  background-color: #333;
  color: #fff;
  text-align: center;
}

#footer a {
  color: #fff;
}

/* Footer ends here */
/* Single Page starts here */
.singlePage_container {
  display: flex;
  width: 68rem;
  height: 34.37rem;
  border: 1px solid #777777;
  margin: 5rem auto;
  text-align: center;
  align-items: center;
  justify-content: center;

  position: relative;
}

.singlePage_image {
  display: flex;
  width: 34rem;
  height: 34rem;
}
.singlePage_info {
  flex: 1;
  display: inline-block;
  text-align: left;
  margin: 2rem;
}
.singlePage_info h2,
h3,
p,
a {
  font-family: inherit;
  margin: 2rem;
  text-align: justify;
}

.singlePage_container a {
  position: absolute;
  bottom: 0;
  padding: 0.5rem;
  border: 1px solid;
  border-radius: 0.25rem;
  text-decoration: none;
}

.singlePage_container a:hover {
  background-color: #eee;
}

/* Single Page ends here */

@media (max-width: 600px) {
  .hero {
    justify-content: center;
    padding: 1rem;
    /* Calculate height: 100vh - Header height */
    height: calc(100vh - 4rem);
    margin-bottom: 0;
  }
  .hero__title {
    text-align: center;
  }
  .hero__title h1 {
    margin-bottom: 1rem;
    font-size: 3rem;
  }

  /* Footer starts here */
  #footer {
    padding: 1rem;
    font-size: 12px;
  }
  /* Footer ends here */
}

/* Card */
/* Use .cards to wrap the Card components */
.productURL {
  /* Takes off link styles from Card */
  text-decoration: none;
  color: inherit;
}
.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1rem;
  padding: 3rem 1rem;
}
.card {
  max-width: 400px;
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
  cursor: pointer;
}
.card:hover {
  transform: scale(0.98);
}
.card__img {
  width: 100%;
  height: 400px;
}
.card__img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}
.card__content {
  padding: 1rem;
}
.card__name {
  font-size: 1.2rem;
}
.card__category {
  margin-bottom: 0.8rem;
  color: #777;
}
.card__price {
  font-weight: 600;
}
@media (max-width: 600px) {
  .cards {
    padding: 1rem 0;
  }
  .card {
    width: 300px;
  }
  .card__img {
    height: 300px;
  }
}
/*navigation responsive*/
@media (max-width: 1200px) {
  header {
    padding: 1rem;
  }
  .mobile {
    display: none;
  }

  .menu_trigger {
    display: block;
    position: fixed;
    top: 3rem;
    right: 4rem;
    cursor: pointer;
    background: transparent;
    border: none;
  }

  .mobile.is-open {
    display: block;
    background-color: white;
    position: absolute;
    left: 0;
    top: 70px;
    width: 100%;
    z-index: 100;
  }

  .mobile.is-open li {
    display: block;
    margin: 1rem;
  }

  /*navigation responsive*/
}

/* Back to top btn for Products page */
.back-to-top {
  position: fixed;
  bottom: 1rem;
  right: 1rem;
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background: white;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
  cursor: pointer;
  opacity: 0.5;
}
.back-to-top__icon {
  margin: 0;
  padding: 0;
  font-size: 2rem;
  color: #333;
}
.back-to-top:hover {
  opacity: 1;
}

/* Product Carousel starts here */

.carouselImg {
  margin: 0 auto;
  width: 100%;
}

/* Overriding slick slide's styling*/
.slick-slide {
  height: inherit !important;
}

.slick-slider {
  width: 100vw;
  margin: 0 15% !important;
}

.slick-track {
  display: flex !important;
}

.slick-track div {
  margin: 0 0.5rem;
}

/* Product Carousel ends */

/* About page */
.about-main {
  max-width: 800px;
  margin: 2rem auto;
  padding: 2rem;
  text-align: left;
  line-height: 1.5;
}
.about-title {
  margin: 2rem 0 4rem;
  font-size: 3rem;
  text-align: center;
}
.about-main h2 {
  margin: 0 0 2rem;
}
.about-main h3 {
  margin: 2.5rem 0 1rem;
}
.about-main p {
  margin: 0 0 0.5rem;
}
.about-main a {
  margin: 0;
}
.about-list li {
  display: list-item;
  margin: 0 0 0 2rem;
}
/* About page ends */


/*auth.jsx starts*/
#authPage {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;

}

#authForm {
  padding: 1rem;
  width: fit-content;
}

#authForm h2 {
  text-align: center;
  font-size: 2rem;
  font-weight: bolder;
  -webkit-text-stroke: 4px;
  letter-spacing: 4px;
  margin: 0 auto;
  margin-bottom: 1rem;
  padding: 0.5rem;
  border-radius: 0.5rem;
  color: darkslateblue;
  background-color: #ccc;
}

#authForm form {
  border: 0px solid #000;
  border-radius: 0.5rem;
  padding: 1rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #ddd;
}

#authForm label {
  color: darkslateblue;
  font-weight: bold;
}

#authForm input {
  accent-color: #bbb;
  color: darkslateblue;
  background-color: #ccc;
  border: 1px solid darkslateblue;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  margin-bottom: 0.5rem;
  width: 100%;

  display: flex;
  flex-direction: row;
}

#authForm button[type='submit'] {
  place-items: center;
  background-color: #ccc;
  padding: 0.5rem 0.125rem;
  border-radius: 0.25rem;
  border: 1px solid #333;
  margin-top: 0.5rem;
  width: 100%;
  text-align: center;
}

#authForm button[type='submit']:hover {
  background-color: beige;
  border-color: #333;
}

#authForm > button[type='button'] {
  color: darkslateblue;
  border: 1px solid none;
}

#authForm > button[type='button']:hover {
  border: 1px solid none;
}

#authForm #authP {
  cursor: pointer;
  color: darkgreen;
  font-weight: bolder;
  margin-top: 1rem;
}
/*auth.jsx ends*/


/* Dashboard CSS starts here */
#dashPage {
  display: flex;
  justify-content: center;
}

#dash {
  margin: 1rem auto;
  padding: 1rem;
  width: fit-content;
  min-width: 20vw;
}

#dash form {
  border: 0px solid #000;
  border-radius: 0.5rem;
  padding: 1rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #ddd;
}

#dash h2 {
  text-align: center;
  font-size: 2rem;
  font-weight: bolder;
  -webkit-text-stroke: 2px;
  margin: 0 auto;
  margin-bottom: 1rem;
  border-bottom: 1px solid #444;
}

#dash h3 {
  text-align: center;
  font-size: 1.75rem;
  -webkit-text-stroke: 2px;
  color: darkslateblue;
  letter-spacing: 2px;
  margin: 2rem auto;
}

#dash h4 {
  text-align: center;
  font-size: 1rem;
  font-weight: bolder;
  -webkit-text-stroke: 1px;
  letter-spacing: 1px;
  margin: 0.5rem auto;
  margin-bottom: 1rem;
  border-bottom: 1px solid #444;
}

#dash label {
  color: darkslateblue;
  font-weight: bold;
}

#dash input {
  accent-color: #bbb;
  color: darkslateblue;
  background-color: #ccc;
  border: 1px solid darkslateblue;
  border-radius: 0.25rem;
  padding: 0.25rem 0.5rem;
  margin-bottom: 0.5rem;
  width: 100%;

  display: flex;
  flex-direction: row;
}

form > button[type='submit'] {
  color: darkslateblue;
  background-color: #ddd;
  border: 1px solid darkslateblue;
  padding: 0.75rem 0;
  border-radius: 0.5rem;
  font-size: 1.25rem;
}

form > button[type='submit']:hover {
  border: 1px solid none;
  background-color: darkslateblue;
  color: #ddd;
}
/* Dashboard CSS ends here */

